# sign-language-avatar

./: .env.example  .gitignore  CREDITS  Makefile  README.md  app.py  build.py  pyproject.toml  sigml-reference.md
.github/workflows/: deploy.yml
data/: dictionary.json  words.json
data/sigml/: أربعة.sigml  اثنان.sigml  تسعة.sigml  ثلاثة.sigml  ثمانية.sigml  خمسة.sigml  سبعة.sigml  ستة.sigml  عشرة.sigml  واحد.sigml
docs/: sigml-reference.md
templates/: avatar.html  embed.html  playground.html
tests/: extract_data_word_list.py  test_api.py  test_extractor.py
web-simulator/: avatar.js  avatar.json  dictionary.json  index.html
