[tool.poetry]
package-mode = false
name = "sign-language-avatar"
version = "0.1.0"
description = "Automated Arabic Algerian Sign Language (ALSL) translation system using 3D avatar technology"
authors = [
    "Amine Mami",
    "Mohamed Elfares Slimani",
    "Taha Zerrouki",
    "Redha Mazari",
]
license = "CC-BY-NC-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
httpx = ">=0.24.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

